# NetTcpJson

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  unit-tests.yml
cmake/: CPM.cmake  Dependencies.cmake  FetchGTest.cmake  FetchNetTcp.cmake  PrintConfiguration.cmake
src/NetTcpJson/: Export.hpp  Extractor.cpp  Extractor.hpp  Server.cpp  Server.hpp  Socket.cpp  Socket.hpp  SocketWorker.cpp  SocketWorker.hpp
tests/: CMakeLists.txt  ExtractorTests.cpp  ServerTests.cpp  Tests.cpp
